2002-08-14  Alasdair Allan <aa@astro.ex.ac.uk>

        * Original version, not fully functional
